--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-ul {
+  padding: 5px;
+  margin: 0px;
+  background-color: skyblue;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-ul li a {
+  color: black;
+  padding: 5px;
+  text-decoration: none;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.nav-ul li a:hover {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-ul li {
+  display: inline-block;
+  text-decoration: none;
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  background-color: skyblue;
+  height: 50px;
+}
+
+.input {
+  margin-left: 30%;
+}
+
+.inputBox {
+  display: block;
+  width: 300px;
+  margin: 25px;
+  padding: 7px;
+  border: 1px solid burlywood;
+}
+.submitButton {
+  display: flex;
+  border: 1px solid;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  margin-left: 100px;
+  background-color: burlywood;
 }
