--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,153 @@
-.App {
-  text-align: center;
-}
-.nav-ul {
-  padding: 5px;
-  margin: 0px;
-  background-color: skyblue;
-}
-.nav-ul li a {
-  color: black;
-  padding: 5px;
-  text-decoration: none;
-}
-.nav-ul li a:hover {
-  color: white;
-}
-
 .nav-ul li {
   display: inline-block;
-  text-decoration: none;
   padding: 10px;
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  text-align: center;
-  width: 100%;
+.nav-ul {
+  padding: 5px;
+  margin: 0;
   background-color: skyblue;
-  height: 50px;
+}
+.nav-ul a {
+  padding: 5px;
+  text-decoration: none;
+  color: black;
+  border: 1 px solid transparent;
 }
 
-.input {
+.nav-ul a:hover {
+  color: rgb(24, 78, 194);
+}
+
+.footer {
+  height: 25px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: skyblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.register,
+.product {
   margin-left: 30%;
+}
+
+.login {
+  margin-left: 30%;
+  margin-top: 50px;
 }
 
 .inputBox {
   display: block;
-  width: 300px;
-  margin: 25px;
+  margin: 20px;
   padding: 7px;
-  border: 1px solid burlywood;
+  width: 300px;
+  border: 1px solid skyblue;
 }
-.submitButton {
-  display: flex;
-  border: 1px solid;
-  justify-content: center;
-  align-items: center;
+
+.appButton {
+  margin-top: 5px;
+  margin-left: 105px;
+  padding: 10px;
   width: 150px;
-  margin-left: 100px;
-  background-color: burlywood;
+  background-color: #61dafb;
+  border: 1px solid;
+  cursor: pointer;
+}
+
+.nav-right {
+  text-align: right;
+}
+
+.invalid-input {
+  color: red;
+  margin-top: -20px;
+  display: block;
+  margin-left: 116px;
+}
+
+h1 {
+  margin-top: 1px;
+}
+
+.product-list {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.product-list ul li {
+  display: inline-block;
+  border: 1px solid skyblue;
+  padding: 5px;
+  width: 90px;
+}
+
+.product-list ul {
+  margin: 0px;
+}
+
+.operation-button {
+  background-color: transparent;
+  border: none;
+  color: black;
+  margin-right: 8px;
+}
+.operation-button:hover {
+  background-color: #ddd;
+  cursor: pointer;
+}
+
+.search-product-box {
+  width: 400px;
+  margin: 20px;
+  height: 40px;
+  border: 1px solid skyblue;
+  padding-left: 20px;
+}
+.invalid-search {
+  color: red;
+  margin-top: 1px;
+  display: block;
+  margin-left: 35px;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+.logo {
+  width: 45px;
+  height: 45px;
+  float: left;
+  border-radius: 50%;
+  margin-top: 3px;
+  margin-left: 20px;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
